<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back101"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="200dp"
        android:text="@string/hello_Taipei"
        android:textColor="#FF0F00"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft = "10dp"
        android:text="@string/id"
        android:textColor="#000000"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/etId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft = "5dp"
        android:ems="10"
        android:hint="@string/id"
        android:maxLength="10" />
    <TextView
        android:id="@+id/textViewMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginLeft = "10dp"
        android:text="@string/mobile"
        android:textColor="#000000"
        android:textSize="20sp" />
     <EditText
        android:id="@+id/etMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginLeft = "5dp"
        android:ems="20"
        android:hint="@string/mobile"
        android:maxLength="10" />

    <EditText
        android:id="@+id/etInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etMobile"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/hello_Taipei"
        android:maxLength="20"
        android:text="@string/hello_Taipei" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textViewMobile"
        android:layout_alignTop="@+id/textView1"
        android:text="@string/button1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="34dp"
        android:text="@string/summitbutton" />

   
</RelativeLayout>